--- a/config_file.cfg
+++ b/config_file.cfg
@@ -1,21 +1,20 @@
 TRACK_TYPE = IOU
-# TRACK_TYPE = 'SORT'
-# TRACK_TYPE = 'DEEP_SORT'
-name_file = 2
-PATH_TEST = 'D:/DATA/cars_for_vkr/Annotations/Annotations_2/*.xml'
-PATH_OUTPUT = 'D:/DATA/cars_for_vkr/frame_final2.avi'
-PATH_IMG = 'D:/DATA/cars_for_vkr/Frames/Frames_2/*.png'
-PATH_TXT = 'D:/DATA/cars_for_vkr/Detections2/Frames_2_TY4.txt'
-wt_path = 'model_data/model600.pt'
-MOT_TEST = True # флаг True, если необходим вывод оценки
-Track_without_det = False # флаг True, если необходима обработка пропущенных детекций (реализована в адгоритме SORT)
-iou_threshold = 0.8
-n_init = 3 # для SORT и DeepSort
+#TRACK_TYPE = SORT
+#TRACK_TYPE = DEEP_SORT
+name_test = 2
+PATH_TEST = D:/DATA/cars_for_vkr/Annotations/Annotations_2/*.xml
+PATH_OUTPUT = D:/DATA/cars_for_vkr/frame_final2.avi
+PATH_IMG = D:/DATA/cars_for_vkr/Frames/Frames_2/*.png
+PATH_TXT = D:/DATA/cars_for_vkr/Detections2/Frames_2_TY4.txt
+wt_path = model_data/model600.pt
+MOT_TEST = True
+Track_without_det = False
+iou_threshold = 0.5
+n_init = 3
 max_age = 10
-# for DEEP_SORT
+#for DEEP_SORT
 max_cosine_distance = 0.5
-# for IOU
-sigma_l=0
-sigma_h=0.9
-
+#for IOU
+sigma_l = 0
+sigma_h = 0.9
 
